Terminada interfaz de bits. 231 bits de respuesta.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.robocode.classpath}
+    ${libs.Robocode.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
