--- a/config/robocode.properties
+++ b/config/robocode.properties
@@ -1,6 +1,9 @@
 #Robocode Properties
-#Mon Jul 22 17:35:38 CEST 2013
+#Wed Jul 31 19:34:06 CEST 2013
 robocode.cpu.constant=5725820
 robocode.options.battle.desiredTPS=30
+robocode.options.rendering.antialiasing=0
+robocode.options.rendering.method=0
+robocode.options.rendering.text.antialiasing=0
 robocode.version.lastrun=1.8.2.0
-robocode.versionchecked=07/22/2013 17\:35\:25
+robocode.versionchecked=07/31/2013 19\:33\:52
